terraform/amazon/network-existing-vpc/vpc_endpoints.tf
resource "aws_vpc_endpoint" "s3" {
  vpc_id          = "${var.vpc_id}"
  service_name    = "com.amazonaws.${var.region}.s3"
  route_table_ids = ["${data.aws_route_table.private.*.id}"]
}
